# cim

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 94e8c9705418_initial_schema.py  b1c4d7e29f30_add_asset_class_table_and_category.py  c2d5e8f41a7b_add_instrument_price_source.py  f6a988738adc_add_account_owner_id.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  account.py  asset_class.py  category.py  enums.py  exchange_rate.py  instrument.py  movement.py  price.py
backend/app/routers/: _docs.py  accounts.py  (+7 more)
backend/scripts/: README.md  resolve_symbol.py  update_prices.py
backend/tests/: conftest.py  factories.py  test_asset_class_sync.py  test_health.py  test_market_data_gaps.py  test_market_data_providers.py  test_market_data_upsert.py  test_models.py  test_openapi_docs.py  test_resolve_symbol_script.py  test_routers_accounts.py  test_routers_allocation.py  test_routers_asset_classes.py  test_routers_categories.py  test_routers_instruments.py  test_routers_movements.py  test_routers_net_worth.py  test_routers_positions.py  test_schemas_common.py  test_schemas_movement.py  test_schemas_resources.py  test_update_prices_runner.py  test_update_prices_script.py  test_valuation_allocation.py  test_valuation_cash.py  test_valuation_fifo.py  test_valuation_fx.py  test_valuation_loans.py  test_valuation_net_worth.py  test_valuation_positions.py  test_valuation_prices.py  test_valuation_series.py
(+64 files in other folders)
